Docs: Added documentation to my changes

--- a/star_wars_survey.ipynb
+++ b/star_wars_survey.ipynb
@@ -70,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removed all the rows where RespondentID contained a null value.\n",
     "star_wars = star_wars[pd.notnull(star_wars['RespondentID'])]"
    ]
   },
@@ -322,8 +323,10 @@
     }
    ],
    "source": [
+    "# Created a map which converted, 'Yes, No' to boolean values.\n",
     "yes_no = {\"Yes\": True,\"No\": False}\n",
     "\n",
+    "# Looped through these two columns and replaced all the Yes, No values with bools\n",
     "for c in ['Have you seen any of the 6 films in the Star Wars franchise?',\\\n",
     "    'Do you consider yourself to be a fan of the Star Wars film franchise?']:\n",
     "    star_wars[c] = star_wars[c].map(yes_no)\n",
@@ -337,6 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Created a map to change these movie values to simple boolean values\n",
     "movie_mapping = {\"Star Wars: Episode I  The Phantom Menace\": True,\n",
     "    np.nan: False,\n",
     "    \"Star Wars: Episode II  Attack of the Clones\": True,\n",
@@ -345,6 +349,7 @@
     "    \"Star Wars: Episode V The Empire Strikes Back\": True,\n",
     "    \"Star Wars: Episode VI Return of the Jedi\": True}\n",
     "\n",
+    "# Looped through the columns and applyed my map\n",
     "for c in star_wars.columns[3:9]:\n",
     "    star_wars[c] = star_wars[c].map(movie_mapping)"
    ]
@@ -355,6 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Renamed the columns so they would make more intuitive sense.\n",
     "star_wars = star_wars.rename(columns={'Which of the following Star Wars films have you seen? Please select all that apply.':'seen_1',\n",
     "       'Unnamed: 4':'seen_2', 'Unnamed: 5':'seen_3', 'Unnamed: 6':'seen_4', 'Unnamed: 7':'seen_5', 'Unnamed: 8':'seen_6'})"
    ]
