Refactor: Updated column names and types

--- a/star_wars_survey.ipynb
+++ b/star_wars_survey.ipynb
@@ -458,6 +458,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing each columns that rank people's favorite Star Wars movies to floats.\n",
+    "star_wars[star_wars.columns[9:15]] = star_wars[star_wars.columns[9:15]].astype(float)\n",
+    "\n",
+    "star_wars = star_wars.rename(columns={'Please rank the Star Wars films in order of preference with 1 being your favorite film in the franchise and 6 being your least favorite film.':'rank_1',\n",
+    "       'Unnamed: 10':'rank_2', 'Unnamed: 11':'rank_3', 'Unnamed: 12':'rank_4', 'Unnamed: 13':'rank_5',\n",
+    "       'Unnamed: 14':'rank_6'})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
