Docs: Added comments regarding movie viewership

--- a/star_wars_survey.ipynb
+++ b/star_wars_survey.ipynb
@@ -593,6 +593,19 @@
    ]
   },
   {
+   "source": [
+    "## Viewership\n",
+    "\n",
+    "So, it appears that more people have seen episodes V and VI than any of the other films. In all reality it does appear that there might be a correlation between the amount of people who have seen a film and it's ranking.  While having higher viewership could affect the rating negatively it doesn't appear that has happened. \n",
+    "\n",
+    "The rankings line up almost perfectly with the number of people who watched it. With the exception of episode I.  While it did achieve a better ranking than both episodes II and III, it came just behind episode IV. \n",
+    "\n",
+    "While I'm not suprised by these findings I do think it's interesting that despite this being a small survey 100+ people reported seeing episode I and not episode III.  I would be curious to see if this reflects the general population."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
