Docs: Added comments on gender aggregation data

--- a/star_wars_survey.ipynb
+++ b/star_wars_survey.ipynb
@@ -774,11 +774,24 @@
    ]
   },
   {
-   "source": [],
+   "source": [
+    "## Observations\n",
+    "\n",
+    "The rankings were far more prounounced amongst males than females.  This isn't too suprising as even based on the viewership statistics males tend to be more invested in the star wars universe than females. (We could confirm this by aggregating the survey responses to the question: \"Do you consider yourself to be a fan of the Star Wars film franchise\".)\n",
+    "\n",
+    "Most rankings lined up with the overall belief that the Original Trilogy is superior to the prequels. \n",
+    "\n",
+    "However, I will note that females did rank episode I slightly higher than episode IV.  It will be interesting to see how these stats change when we look at fans vs non fans."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
-   "outputs": []
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
